# WinToastBuild

./: CMakeLists.txt
.github/workflows/: cmake-build.yml
